add service unit tests: 17 tests with Mockito, fix Byte Buddy Java 25 compatibility